--- a/login.html
+++ b/login.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+    <form id = "loginForm">asdsafghj
+
+    </form>
     
 </body>
 </html>
