--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <label>Password</label>
         <input type="password" id="pass" placeholder="Enter your password" required> <br/>
 
-        <button type="submit">Log in</button>
+        <button type="submit">Log-In</button>
         <!--  Try to add 'Remember me' option      -->
     </form>
 </body>
