--- a/login.html
+++ b/login.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <h1>Log in to Account</h1>
-    <form>
-        <label>E-mail</label>
-        <input type="email" id="email" placeholder="Enter your email" required> <br/>
-        
-        <label>Password</label>
-        <input type="password" id="pass" placeholder="Enter your password" required> <br/>
+    <div class="login">
+        <h1>Log in to Account</h1>
+        <form>
+            <label>E-mail</label>
+            <input type="email" id="email" placeholder="Enter your email" required> <br/>
+            
+            <label>Password</label>
+            <input type="password" id="pass" placeholder="Enter your password" required> <br/>
 
-        <button type="submit">Log-In</button>
-        <!--  Try to add 'Remember me' option      -->
-    </form>
+            <button type="submit">Log-In</button>
+            <!--  Try to add 'Remember me' option      -->
+        </form>
+    </div>
 </body>
 </html>
