--- a/login.html
+++ b/login.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="login">
         <h1>Log in to Account</h1>
         <form>
-            <label>E-mail</label>
-            <input type="email" id="email" placeholder="Enter your email" required> <br/>
+            <label></label>
+            <input type="email" id="email" placeholder="    Email" required> <br/>
             
-            <label>Password</label>
-            <input type="password" id="pass" placeholder="Enter your password" required> <br/>
+            <label></label>
+            <input type="password" id="pass" placeholder="    Password" required> <br/>
 
-        <button type="submit">Log-In</button>
+        <button type="submit">SIGN IN</button>
         <!--  Try to add 'Remember me' option      -->
     </form>
 </body>
