--- a/login.html
+++ b/login.html
@@ -37,8 +37,11 @@
                         <div class="input-group">
                             <input type="password" placeholder="Password" required>
                         </div>
-                        <button type="submit">Login</button>
+                        <button type="submit" class="login-button">Login</button>
                     </form>
+                    <div class="register-box">
+                        <p>Not registered? <button class="register-button">Create an account!</button></p>
+                    </div>
                 </div>
             </div>
         </div>
