--- a/home.html
+++ b/home.html
@@ -21,8 +21,15 @@
     </div>
     <div class="page">
             <div class="firstrecipe">
-                <h2>Pasta</h2>
-                <p>Learn how to</p>
+                <section class="scroll-animation">
+                    <h2><span>Ready to cook?</span></h2>
+                    <p>
+                        <span>
+                            Browse through our collection of delicious yet easy-to-make recipes that bring joy to your tastebuds. Whether you're having a small dinner or a fun party,
+                             discover the perfect recipe that matches your grandeur — We'll also make sure your guests return for the food.
+                        </span>
+                    </p>
+                </section>
             </div>
     </div>
 </body>
