--- a/login.html
+++ b/login.html
@@ -76,8 +76,8 @@
     </div>
 
     <script>
-        // so help me GOD abdur
-        // i hate everythingggg but it works, sorry for the messy code
+        // its ok 
+        // everything looks so zesty
         
         document.addEventListener("DOMContentLoaded", function() {
             const formBox = document.getElementById("form-box");
