--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <nav>    
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
