fixed minimization window problem for the register

--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
                     </div>
                 </form>
                 <div class="sliding-box">
-                    <p>&nbsp&nbsp&nbspAlready have an existing account? <button class="sliding-button sign-in-button">Sign in!</button></p>
+                    <p class = "text-registered">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAlready have an existing account? <button class="sliding-button sign-in-button">Sign in!</button></p>
                 </div>
             </div>
         </div>
