--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                         <div>
                             <h2 id="title2"><a href="#"> Spaghetti Carbonara</a><br/></h2><br/>
                             <p id="desc2">
-                                Classic Spaghetti Carbonara — A traditional Italian dish featuring al dente spaghetti tossed in a rich and creamy sauce made from eggs and Parmesan cheese. 
+                                A traditional Italian dish featuring al dente spaghetti tossed in a rich and creamy sauce made from eggs and Parmesan cheese. 
                                 Infused with the smoky flavor of crispy pancetta, and seasoned with freshly ground black pepper, this pasta dish is both simple and indulgent. Finished with 
                                 a sprinkling of extra cheese and a touch of parsley, our Spaghetti Carbonara offers a perfect blend of savory and creamy notes that will delight your taste 
                                 buds and leave you craving more.
