--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
     </div>
     <div class="page">
-            <div class="firstrecipe">
+            <div class="main">
                 <section class="scroll-animation">
                     <h2><span>Ready to cook?</span></h2>
                     <p>
@@ -36,9 +36,9 @@
                         <div>
                             <h2 id="title1"><a href="#"> Baked Tacos</a><br/></h2><br/>
                             <p id="desc1">
-                                Crispy oven-baked Tacos — Made with crunchy hard taco shells filled with perfectly seasoned ground beef and a blend of taco seasoning. 
-                                Topped with a generous layer of melted cheese, fresh pico de gallo, a dollop of creamy sour cream, and slices of ripe avocado. These tacos 
-                                offer a delightful combination of textures and flavors that will elevate your taco night to a whole new level. Enjoy a satisfying and delicious 
+                                Crispy oven-baked Tacos — Made with crunchy hard taco shells filled with perfectly seasoned ground beef and a blend of taco seasoning. <br>
+                                Topped with a generous layer of melted cheese, fresh pico de gallo, a dollop of creamy sour cream, and slices of ripe avocado. These tacos <br>
+                                offer a delightful combination of textures and flavors that will elevate your taco night to a whole new level. Enjoy a satisfying and delicious <br> 
                                 meal that's easy to prepare and guaranteed to impress your family and friends.
                             </p>
                         </div>
@@ -48,10 +48,10 @@
                         <div>
                             <h2 id="title2"><a href="#"> Spaghetti Carbonara</a><br/></h2><br/>
                             <p id="desc2">
-                                A traditional Italian dish featuring al dente spaghetti tossed in a rich and creamy sauce made from eggs and Parmesan cheese. 
-                                Infused with the smoky flavor of crispy pancetta, and seasoned with freshly ground black pepper, this pasta dish is both simple and indulgent. Finished with 
-                                a sprinkling of extra cheese and a touch of parsley, our Spaghetti Carbonara offers a perfect blend of savory and creamy notes that will delight your taste 
-                                buds and leave you craving more.
+                                A traditional Italian dish featuring al dente spaghetti tossed in a rich and creamy sauce made from eggs and Parmesan cheese. <br>
+                                Infused with the smoky flavor of crispy pancetta, and seasoned with freshly ground black pepper, this pasta dish is both simple and indulgent. <br>
+                                Finished with a sprinkling of extra cheese and a touch of parsley, our Spaghetti Carbonara offers a perfect blend of savory and creamy notes that <br>
+                                will delight your taste buds and leave you craving more.
                             </p>
                         </div>
                     </div>
