--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                     </p>
                 </section>
                 <div class="recipe-list"> <!-- Within this div is where recipes are listed; the ids within the elements will be used for JS, for editing or removing.-->
-                    <div id="first" class="recipes" >
+                    <div id="rec1" class="recipes" >
                         <img src="assets/baked_tacos.jpg" >
                         <div>
                             <h2 id="title1"><a href="#"> Baked Tacos</a><br/></h2><br/>
@@ -43,7 +43,7 @@
                             </p>
                         </div>
                     </div>
-                    <div id="second" class="recipes" >
+                    <div id="rec2" class="recipes" >
                         <img src="assets/spaghetti.jpeg" >
                         <div>
                             <h2 id="title2"><a href="#"> Spaghetti Carbonara</a><br/></h2><br/>
@@ -52,6 +52,17 @@
                                 Infused with the smoky flavor of crispy pancetta, and seasoned with freshly ground black pepper, this pasta dish is both simple and indulgent. <br>
                                 Finished with a sprinkling of extra cheese and a touch of parsley, our Spaghetti Carbonara offers a perfect blend of savory and creamy notes that <br>
                                 will delight your taste buds and leave you craving more.
+                            </p>
+                        </div>
+                    </div>
+                    <div id="rec3" class="recipes" >
+                        <img src="assets/nasi.jpg" >
+                        <div>
+                            <h2 id="title2"><a href="#"> Nasi Goreng</a><br/></h2><br/>
+                            <p id="desc2">
+                                Savory Nasi Goreng — This Indonesian fried rice features fragrant jasmine rice stir-fried with garlic, shallots, and soy sauce. Mixed with tender <br>
+                                chicken, succulent shrimp, and fresh vegetables, it's topped with a fried egg, crispy shallots, and tangy pickles. A burst of authentic flavors, <br>
+                                perfect for a quick dinner or a special treat.
                             </p>
                         </div>
                     </div>
