--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <div class="page">
             <div class="box" id="form-box">
                 <div class="left">
-
+                    <!-- exists to organise items on the left-->
                 </div>
                 <div class="right">
                     <div class="text">
