more elements and colour change

--- a/home.html
+++ b/home.html
@@ -66,6 +66,9 @@
                             </p>
                         </div>
                     </div>
+                    <div class="dropdown">
+                        <h1 style="text-align: center;">View More</h1>
+                    </div>
                 </div>
             </div>
     </div>
