--- a/admin_home.html
+++ b/admin_home.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Home</title>
+    <link rel="stylesheet" href="admin_home.css">
 </head>
 <body>
-    
+    <div class="entire">    
+        <div class="navbar">
+            <nav>    
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li class = "logout">Log Out</li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="content">
+        <div class="divImg">
+            <img src="assets/recipe2.png"></img>
+        </div>
+        <div class="text">
+            <h1>Welcome,<br> Abdur Cader!</h1>
+            <div class = "under">
+                <h3>The place to manage your recipes.</h3>
+                <div class = "paragraph">
+                    <p>Discover a world of culinary possibilities right at your fingertips! With our user-friendly interface, you can effortlessly add delicious new recipes, remove outdated ones with one simple click, and refine existing recipes to perfection. Elevate your culinary creations and showcase them beautifully on your site.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
