--- a/admin_home.html
+++ b/admin_home.html
@@ -28,7 +28,7 @@
             <div class = "under">
                 <h3>The place to manage your recipes.</h3>
                 <div class = "paragraph">
-                    <p>Discover a world of culinary possibilities right at your fingertips! With our user-friendly interface, you can effortlessly add delicious new recipes, remove outdated ones with one simple click, and refine existing recipes to perfection. Elevate your culinary creations and showcase them beautifully on your site.</p>
+                    <p>Discover a world of culinary possibilities right at your fingertips! With our user-friendly interface, you can effortlessly add delicious new recipes, remove outdated ones, and refine existing recipes to perfection. Elevate your culinary creations and showcase them beautifully on our site.</p>
                 </div>
             </div>
         </div>
