--- a/admin_home.html
+++ b/admin_home.html
@@ -21,17 +21,63 @@
     </div>
     <div class="content">
         <div class="divImg">
-            <img src="assets/recipe2.png"></img>
+            <img src="assets/recipe2.png" alt="Recipe Image">
         </div>
         <div class="text">
             <h1>Welcome,<br> Abdur Cader!</h1>
             <div class = "under">
                 <h3>The place to manage your recipes.</h3>
                 <div class = "paragraph">
-                    <p>Discover a world of culinary possibilities right at your fingertips! With our user-friendly interface, you can effortlessly add delicious new recipes, remove outdated ones, and refine existing recipes to perfection. Elevate your culinary creations and showcase them beautifully on our site.</p>
+                    <p>Discover a world of culinary possibilities right at your fingertips! With our user-friendly interface, you can effortlessly add delicious new recipes, remove outdated ones, and refine existing recipes to perfection. </p>
                 </div>
             </div>
         </div>
+    </div>
+    <div class = "options">
+        <ul class = "images cards">
+            <li class="card">
+                <a href="#"> <!-- Redirect to adding page -->
+                    <img src="assets/pasta.jpg" class="card__image" alt="Pasta">
+                    <div class="card__overlay">
+                        <div class="card__header">
+                            <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
+                            <div class="card__header-text">
+                                <h3 class="card__title">ADD</h3>
+                            </div>
+                        </div>
+                        <p class="card__description">Add new recipes with detailed ingredients and instructions to expand your culinary repertoire.</p>
+                    </div>
+                </a>
+            </li>
+            <li class="card">
+                <a href="#"> <!-- Redirect to editing page -->
+                    <img src="assets/shawarma.jpg" class="card__image" alt="Shawarma">
+                    <div class="card__overlay">
+                        <div class="card__header">
+                            <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
+                            <div class="card__header-text">
+                                <h3 class="card__title">EDIT</h3>
+                            </div>
+                        </div>
+                        <p class="card__description">Modify existing recipes, including their category and cuisine type, to tailor your cooking experience.</p>
+                    </div>
+                </a>
+            </li>
+            <li class="card">
+                <a href="#"> <!-- Redirect to deleting page -->
+                    <img src="assets/dessert.jpg" class="card__image" alt="Dessert">
+                    <div class="card__overlay">
+                        <div class="card__header">
+                            <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
+                            <div class="card__header-text">
+                                <h3 class="card__title">DELETE</h3>
+                            </div>
+                        </div>
+                        <p class="card__description">Remove unwanted recipes to keep your collection organized and focused on your favorite dishes.</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
