updates and new files

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                     </p>
                 </section>
                 <div class="recipe-list"> <!-- Within this div is where recipes are listed; the ids within the elements will be used for JS, for editing or removing.-->
-                    <div id="rec1" class="recipes" >
+                    <div id="rec1" class="recipes" onclick="window.location.href='recipes/rec1.html'">
                         <img src="assets/baked_tacos.jpg" >
                         <div>
                             <h2 id="title1"><a href="#"> Baked Tacos</a><br/></h2><br/>
@@ -43,7 +43,7 @@
                             </p>
                         </div>
                     </div>
-                    <div id="rec2" class="recipes" >
+                    <div id="rec2" class="recipes" onclick="window.location.href='recipes/rec2.html'">
                         <img src="assets/spaghetti.jpeg" >
                         <div>
                             <h2 id="title2"><a href="#"> Spaghetti Carbonara</a><br/></h2><br/>
@@ -55,7 +55,7 @@
                             </p>
                         </div>
                     </div>
-                    <div id="rec3" class="recipes" >
+                    <div id="rec3" class="recipes" onclick="window.location.href='recipes/rec3.html'">
                         <img src="assets/nasi.jpg" >
                         <div>
                             <h2 id="title2"><a href="#"> Nasi Goreng</a><br/></h2><br/>
