--- a/admin_home.html
+++ b/admin_home.html
@@ -24,7 +24,7 @@
             <img src="assets/recipe2.png" alt="Recipe Image">
         </div>
         <div class="text">
-            <h1>Welcome,<br> Abdur Cader!</h1>
+            <h1>spez,<br> ur so :duckbun:</h1>
             <div class = "under">
                 <h3>The place to manage your recipes.</h3>
                 <div class = "paragraph">
