--- a/public/html/admin_home.html
+++ b/public/html/admin_home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Home</title>
-    <link rel="stylesheet" href="admin_home.css">
+    <link rel="stylesheet" href="../css/admin_home.css">
 </head>
 <body>
     <div class="entire">    
@@ -21,7 +21,7 @@
     </div>
     <div class="content">
         <div class="divImg">
-            <img src="assets/recipe2.png" alt="Recipe Image">
+            <img src="../assets/recipe2.png" alt="Recipe Image">
         </div>
         <div class="text">
             <h1>spez,<br> ur so :duckbun:</h1>
@@ -37,7 +37,7 @@
         <ul class = "images cards">
             <li class="card">
                 <a href="#"> <!-- Redirect to adding page -->
-                    <img src="assets/pasta.jpg" class="card__image" alt="Pasta">
+                    <img src="../assets/pasta.jpg" class="card__image" alt="Pasta">
                     <div class="card__overlay">
                         <div class="card__header">
                             <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
@@ -51,7 +51,7 @@
             </li>
             <li class="card">
                 <a href="#"> <!-- Redirect to editing page -->
-                    <img src="assets/shawarma.jpg" class="card__image" alt="Shawarma">
+                    <img src="../assets/shawarma.jpg" class="card__image" alt="Shawarma">
                     <div class="card__overlay">
                         <div class="card__header">
                             <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
@@ -65,7 +65,7 @@
             </li>
             <li class="card">
                 <a href="#"> <!-- Redirect to deleting page -->
-                    <img src="assets/dessert.jpg" class="card__image" alt="Dessert">
+                    <img src="../assets/dessert.jpg" class="card__image" alt="Dessert">
                     <div class="card__overlay">
                         <div class="card__header">
                             <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
