--- a/public/html/home.html
+++ b/public/html/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
     <div class="entire">    
@@ -32,7 +32,7 @@
                 </section>
                 <div class="recipe-list"> <!-- Within this div is where recipes are listed; the ids within the elements will be used for JS, for editing or removing.-->
                     <div id="rec1" class="recipes" onclick="window.location.href='recipes/rec1.html'">
-                        <img src="assets/baked_tacos.jpg" >
+                        <img src="../assets/baked_tacos.jpg" >
                         <div>
                             <h2 id="title1"><a href="#"> Baked Tacos</a><br/></h2><br/>
                             <p id="desc1">
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <div id="rec2" class="recipes" onclick="window.location.href='recipes/rec2.html'">
-                        <img src="assets/spaghetti.jpeg" >
+                        <img src="../assets/spaghetti.jpeg" >
                         <div>
                             <h2 id="title2"><a href="#"> Spaghetti Carbonara</a><br/></h2><br/>
                             <p id="desc2">
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div id="rec3" class="recipes" onclick="window.location.href='recipes/rec3.html'">
-                        <img src="assets/nasi.jpg" >
+                        <img src="../assets/nasi.jpg" >
                         <div>
                             <h2 id="title2"><a href="#"> Nasi Goreng</a><br/></h2><br/>
                             <p id="desc2">
