--- a/public/recipes/rec1.html
+++ b/public/recipes/rec1.html
@@ -29,34 +29,26 @@
         </div>
         <div class="ing">
             <h2 id="sub1">Ingredients You'll Need</h2>
-            <p id="ing1">200g spaghetti</p>
-            <p id="ing2">100g pancetta
-            <p id="ing3">2 large eggs
-            <p id="ing4">50g pecorino cheese
-            <p id="ing5">50g parmesan
-            <p id="ing6">2 plump garlic cloves - peeled and left whole
-            <p id="ing7">50g unsalted butter
-            <p id="ing8">sea salt and freshly grated black pepper</p>
+            <p id="ing1">1 lb ground beef</p>
+            <p id="ing2">1 packet taco seasoning</p>
+            <p id="ing3">1/2 cup water</p>
+            <p id="ing4">12 hard taco shells</p>
+            <p id="ing5">1 cup shredded cheddar cheese</p>
+            <p id="ing6">Toppings: lettuce, tomato, sour cream, salsa, etc.</p>
+            <p id="ing7"></p>
+            <p id="ing8"></p>
             <p id="ing9"></p>
             <p id="ing10"></p>
         </div>
         <div class="instructs">
             <h2 id="sub2">Preparations and Instructions</h2>
-            <p id="inst1">1.	Put a large saucepan of water on to boil.<br>
-                2.	Finely chop the pancetta, having first removed any rind.<br>
-                3.	Beat the eggs in a medium bowl, season with a little freshly grated black pepper and set everything aside.<br>
-                4.	Add the spaghetti to the water and cook according to the pack instructions.<br>
-                5.	Squash the garlic with the blade of a knife, just to bruise it.<br>
-                6.	Melt the butter in a deep frying pan, then add the pancetta and garlic.<br>
-                7.	Leave to cook on a medium heat for about 5 minutes, stirring often, until the pancetta is golden and crisp.<br>
-                8.	Take the pan of spaghetti off the heat. Quickly pour in the eggs and pancetta, and toss together.<br>
-                9.	Serve immediately with a little sprinkling of the remaining cheese and a grating of black pepper.<br></p>
-            <p id="inst2"></p>
-            <p id="inst3"></p>
-            <p id="inst4"></p>
-            <p id="inst5"></p>
-            <p id="inst6"></p>
-            <p id="inst7"></p>
+            <p id="inst1">Preheat your oven to 375°F (190°C).</p>
+            <p id="inst2">Brown the ground beef in a pan over medium heat. Drain any excess fat.</p>
+            <p id="inst3">Stir in taco seasoning and water. Simmer for 5 minutes until thickened.</p>
+            <p id="inst4">Arrange taco shells in a baking dish. Spoon the beef mixture into each shell.</p>
+            <p id="inst5">Sprinkle cheese over the beef-filled shells.</p>
+            <p id="inst6">Bake for 10-12 minutes until cheese is melted and shells are crispy.</p>
+            <p id="inst7">Add your favorite toppings and serve hot.</p>
             <p id="inst8"></p>
             <p id="inst9"></p>
             <p id="inst10"></p>
