--- a/public/html/login.html
+++ b/public/html/login.html
@@ -30,7 +30,7 @@
                         <h2>User Login</h2>
                     </div>
                     
-                    <form>
+                    <form action="/login" method="POST">
                         <div class="input-group">
                             <input type="text" placeholder="Username" name="username" required>
                         </div>
