--- a/public/html/admin_home.html
+++ b/public/html/admin_home.html
@@ -11,10 +11,10 @@
         <div class="navbar">
             <nav>    
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li class = "logout">Log Out</li>
+                    <li class = "logout"><a href = "#">Log Out</a></li>
                 </ul>
             </nav>
         </div>
