--- a/public/html/admin_home.html
+++ b/public/html/admin_home.html
@@ -36,7 +36,7 @@
     <div class = "options">
         <ul class = "images cards">
             <li class="card">
-                <a href="#"> <!-- Redirect to adding page -->
+                <a href="add.html"> <!-- Redirect to adding page -->
                     <img src="../assets/pasta.jpg" class="card__image" alt="Pasta">
                     <div class="card__overlay">
                         <div class="card__header">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="#"> <!-- Redirect to editing page -->
+                <a href="edit.html"> <!-- Redirect to editing page -->
                     <img src="../assets/shawarma.jpg" class="card__image" alt="Shawarma">
                     <div class="card__overlay">
                         <div class="card__header">
@@ -64,7 +64,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="#"> <!-- Redirect to deleting page -->
+                <a href="delete.html"> <!-- Redirect to deleting page -->
                     <img src="../assets/dessert.jpg" class="card__image" alt="Dessert">
                     <div class="card__overlay">
                         <div class="card__header">
