--- a/public/html/home.html
+++ b/public/html/home.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <nav>    
                 <ul>
-                    <li><a href="/login">Log In</a></li>
+                    <li><a href="/admin_home">Admin</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
