--- a/public/html/login.html
+++ b/public/html/login.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="right">
                     <div class="text">
-                        <h2>User Login</h2>
+                        <h2>Login</h2>
                     </div>
                     
                     <form action="/login" method="POST">
