--- a/public/html/add.html
+++ b/public/html/add.html
@@ -53,6 +53,10 @@
                 <label for="inst">Instructions:</label><br>
                 <textarea id="inst" name="inst" rows="6" cols="80" required></textarea><br>
             </div>
+            <div class="button-container">
+                <button type = "button" class = "back-button">Back</button>
+                <button type="button" class="submit-button">Submit</button>
+            </div>
         </form>
     </div>
 
