--- a/public/html/add.html
+++ b/public/html/add.html
@@ -55,6 +55,9 @@
             </div>
             <div class="button-container">
                 <button type = "button" class = "back-button">Back</button>
+                <div class = "space">
+                    
+                </div>
                 <button type="button" class="submit-button">Submit</button>
             </div>
         </form>
@@ -63,17 +66,30 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const nextButton = document.querySelector('.next-button');
+            const backButton = document.querySelector('.back-button');
             const recipeDetailsForm = document.getElementById('recipe-details-form');
             const recipeNextForm = document.getElementById('recipe-next-form');
             const recipeFormBox = document.querySelector('.recipe-form-box');
 
             nextButton.addEventListener('click', function (event) {
                 event.preventDefault();
+                recipeFormBox.classList.remove('animate-fade-up');
                 recipeDetailsForm.classList.add('hidden');
                 recipeNextForm.classList.remove('hidden');
+                void recipeFormBox.offsetWidth; // razzka remember this is for the force browser to trigger reflow command, it recalculates any visual updates thingy
+                recipeFormBox.classList.add('animate-fade-up')
+            });
+
+            backButton.addEventListener('click', function (event) {
+                event.preventDefault();
+                recipeFormBox.classList.remove('animate-fade-up');
+                recipeNextForm.classList.add('hidden');
+                recipeDetailsForm.classList.remove('hidden');
+                void recipeFormBox.offsetWidth; // razzka remember this is for the force browser to trigger reflow command
                 recipeFormBox.classList.add('animate-fade-up');
             });
         });
+
     </script>
 </body>
 </html>
