--- a/public/html/home.html
+++ b/public/html/home.html
@@ -20,6 +20,7 @@
 
     </div>
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+        <img class="image" src="../assets/logo.png" draggable="false" />
         <img class="image" src="https://images.unsplash.com/photo-1634864572865-1cf8ff8bd23d?q=80&w=2668&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" draggable="false" />
         <img class="image" src="https://images.unsplash.com/photo-1579064291075-fac6b82fe748?q=80&w=2576&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" draggable="false" />
         <img class="image" src="https://images.unsplash.com/photo-1680674774705-90b4904b3a7f?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" draggable="false" />
