--- a/public/html/About_Us.html
+++ b/public/html/About_Us.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="../css/About_Us.css">
 </head>
 <body>
-    <header>
+    <div class = "navbar">
         <nav>
             <ul>
+                <li><a href="/admin_home">Admin</a></li>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="login.html">login</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                
             </ul>
         </nav>
-    </header>
+    </div>
     <main>
         <section class="about-section">
             <h1>About Us</h1>
