--- a/public/html/home.html
+++ b/public/html/home.html
@@ -43,6 +43,11 @@
                         </span>
                     </p>
                 </section>
+
+                <div class = "search-bar">
+                    <input type = "text" id = "search" name = "search" placeholder="Search a recipe..."> 
+                    <img src = "../assets/search.png" class = "searchImg">
+                </div>
                 
                 <div class="recipe-list"> <!-- Within this div is where recipes are listed; the ids within the elements will be used for JS, for editing or removing.-->
                     <div id="rec1" class="recipes" onclick="window.location.href='../recipes/rec1.html'">
