--- a/public/html/home.html
+++ b/public/html/home.html
@@ -16,6 +16,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <img src="../assets/logo2.png"/>
         </div>
 
     </div>
